# url-shortener-rust

./: Cargo.toml
docs/: AI_GENERATED_CODE_OVERVIEW.md  suggestions.md
src/: api.rs  dto.rs  errors.rs  main.rs  persistence.rs  service.rs
src/api/: links.rs
src/dto/: create_link_dto.rs  dto.rs  link_dto.rs
src/errors/: link_error.rs
src/models/: link.rs
src/persistence/: in_memory_store.rs  storage.rs
src/service/: code_generator.rs  link_service.rs
