[package]
name = "url-shortener"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.19.0", features = ["v4", "v7"] }
chrono = { version = "0.4.43", features = ["serde"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "net", "sync"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
rand = "0.10.0-rc.6"
tracing = "0.1.44"
