[package]
name = "url-shortener"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.19.0", features = ["v4", "v7"] }
chrono = { version = "0.4.43", features = ["serde"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "net", "sync"] }
serde = { version = "1.0.228", features = ["derive"] }
axum = { version = "0.8.8", features = ["macros"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
rand = "0.10.0-rc.6"
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
tracing = "0.1.44"
